<resources>
    <string name="app_name">Mazaady Portal</string>
    <string name="categories">Categories</string>
    <string name="favorites">Screens 2</string>
    <string name="main_category">Main Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="specify_here">Specify Here</string>
    <string name="select_sub_cat">Select Sub Category</string>
    <string name="select_main_cat">Select Main Category</string>
    <string name="add_product">Add Product</string>
    <string name="_4">4 منجات</string>
    <string name="similar_products">منجات متشابهه</string>
    <string name="show_all">عرض الكل</string>
    <string name="submit">Submit</string>
    <string name="_02_20_m">02:20 m</string>
    <string name="mazad_start_after">المزاد يبدا بعد</string>
    <string name="_31_22_55">31:22:55</string>
    <string name="min_hour_day">دقيقه ساعه يوم</string>
    <string name="with_date">بتاريخ</string>
    <string name="_26_11_2022">26-11-2022</string>
    <string name="_13_59_00">13:59:00</string>
    <string name="mazad_name">اسم المزاد</string>
    <string name="mazad_details">تفاصيل المزاد</string>
    <string name="code_1234">code 1234</string>
    <string name="mazad_raring">تقييم المزاد</string>
    <string name="immediate_buy_price">سعر الشراء الفوري</string>
    <string name="_200">200 $</string>
    <string name="buy_now">شراء الان</string>
    <string name="get_back">انسحاب</string>
    <string name="the_bidders">المزايدون</string>
    <string name="show_more">عرض الكل</string>
    <string name="the_seller">البائع</string>
    <string name="bidder_name">اسم المزايد</string>
    <string name="current_valur_for_mazaad">القيمه الحاليه للمزاد</string>
    <string name="_10000">+10000</string>
    <string name="_20">20+</string>
    <string name="direct_mazaad">مزاد مباشر</string>
    <string name="_2021">سيارة سريعة بى ام دابليو تصنيع 2021 حالته جديدة</string>
    <string name="start_after">يبدأ بعد</string>
    <string name="min_hr_d">د س يوم</string>
    <string name="mazaad_beginning">بداية المزاد</string>
    <string name="_20000">20000</string>
    <string name="sar">ريال</string>
    <string name="title">Title</string>
    <string name="search">Search...</string>
    <string name="other">اخر</string>


    <string-array name="table_view_demos">
        <item name="random_data_table_view">TableView (Basic)</item>
        <item name="random_data_table_view_with_features">TableView (Advanced)</item>
    </string-array>

    <!-- menu -->
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="hide_row">Hide Row 3</string>
    <string name="show_row">Show Row 3</string>
    <string name="scroll_to_row_position">Scroll to Row 100</string>
    <string name="scroll_to_column_position">Scroll to column 50</string>
    <string name="show_hide_column">Show/Hide column 5</string>

    <!-- tableview controls -->
    <string-array name="items_per_page">
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>All</item>
    </string-array>
    <string-array name="moods">
        <item></item>
        <item>Happy</item>
        <item>Sad</item>
    </string-array>
    <string-array name="gender">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>