<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:strokeWidth="1dp"
        app:strokeColor="#41000000"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <androidx.cardview.widget.CardView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="6dp"
                android:elevation="1dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/car"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_bg_direct_mazad"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/direct_mazaad"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@id/image"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_heart_white_image_bg"
                android:padding="8dp"
                android:src="@drawable/baseline_favorite_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mazad_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/tajawal_medium"

                android:textColor="#1D1D1D"
                android:padding="10dp"
                android:text="@string/_2021"
                android:textSize="14sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_image" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/mazad_name">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/start_date"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_start_after"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_after"
                        android:textColor="#808080"
android:textSize="10sp"
                        android:fontFamily="@font/tajawal_medium"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_start_mins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_31_22_55"
                        android:textColor="#1D1D1D"                        android:textSize="14sp"
                        android:fontFamily="@font/tajawal_bold"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_start_after" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_hr_d"
                        android:textColor="#1D1D1D"                        android:textSize="8sp"
                        android:fontFamily="@font/tajawal_medium"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_start_mins" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/start_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    >

                    <TextView
                        android:id="@+id/tv_start_with_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mazaad_beginning"
                        android:textColor="#808080"
                        android:textSize="10sp"                android:fontFamily="@font/tajawal_medium"


                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_20000"
                        android:textSize="14sp"
                        android:fontFamily="@font/tajawal_bold"

                        android:textColor="#F45B14"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_start_with_date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sar"
                        android:textSize="8sp"
                        android:fontFamily="@font/tajawal_medium"

                        android:textColor="#F45B14"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/price" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>